[package]
name = "gsp"
version = "0.1.4"
edition = "2021"

authors = ["Baptiste Roux"]

description = """
Simple CLI to switch between gcloud projects.
"""

keywords = ["gcloud", "gcp"]
categories = ["command-line-utilities", "config"]

homepage = "https://github.com/BapRx/gsp"
repository = "https://github.com/BapRx/gsp"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
log = "0.4.21"
prettytable = "0.10.0"
rust-ini = "0.21.0"
serde_json = "1.0.116"
serde = { version = "1.0.197", features = ["derive"] }
simplelog = { version = "0.12.2", features = ["paris"] }
skim = "0.10.4"
