[package]
name = "gsp"
version = "0.1.5"
edition = "2021"

authors = ["Baptiste Roux"]

description = """
Simple CLI to switch between gcloud projects.
"""

keywords = ["gcloud", "gcp"]
categories = ["command-line-utilities", "config"]

homepage = "https://github.com/BapRx/gsp"
repository = "https://github.com/BapRx/gsp"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
clap_complete = "4.5.45"
log = "0.4.25"
prettytable = "0.10.0"
rust-ini = "0.21.1"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
simplelog = { version = "0.12.2", features = ["paris"] }
skim = "0.16.0"
